# skin_cancer_detection

./: .gitignore  README.md  action_list.md  custom_dataset.py  dvc.yaml  pyproject.toml  requirements.txt  train.py  utils.py
.dvc/: config
.github/workflows/: python-app.yml  train.yml
app/: main.py
conf/: training_config.yaml
data/: .gitignore  images.dvc  labels.csv.dvc
src/: custom_dataset.py  train.py  utils.py
src/app/: main.py
src/skin_cancer_detection/: __init__.py  custom_dataset.py  model.py  train.py  utils.py
tests/: conftest.py  test_fake.py  test_utils.py
