[tool.poetry]
name = "skin-cancer-detection"
version = "0.0.1"
description = ""
authors = ["Max Schloegel <maxschloegel@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
pytorch-lightning = "2.0.9"
torch = "2.0.1"
torchvision = ">=0.10.0"
pandas = "1.3.3"
pillow = "8.2.0"
hydra-core = "1.3.2"
scipy = "1.10.1"
scikit-learn = "1.3.2"
omegaconf = "2.3.0"
numpy = "1.24.4"
dvc = "3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
