[tool.poetry]
name = "skin-cancer-detection"
version = "0.0.1"
description = ""
authors = ["Max Schloegel <maxschloegel@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
pytorch-lightning = "2.0.9"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
torchvision = ">=0.10.0"
pandas = "1.3.3"
pillow = "8.2.0"
hydra-core = "1.3.2"
scipy = "1.10.1"
scikit-learn = "1.3.2"
omegaconf = "2.3.0"
numpy = "1.24.4"
dvc = {extras = ["s3"], version = "^3.30.3"}
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
mlflow = "^2.8.1"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
